fix: BLOG-52 footer background image filter added; added top non-covered area

--- a/static/scss/blocks/_footer.scss
+++ b/static/scss/blocks/_footer.scss
@@ -1,10 +1,12 @@
 .footer {
+  position: relative;
+  z-index: -2;
   padding-top: 60px;
   padding-bottom: 60px;
   font-size: 14px;
   color: $greyLight;
   line-height: 24px;
-  background-image: url(/static/images/background-footer.png);
+  // background-image: url(/static/images/background-footer.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: bottom;
@@ -15,6 +17,17 @@
     width: 1400px;
   }
 
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 370px;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 360px);
+    background-image: url(/static/images/background-footer.png);
+    filter: contrast(150%);
+  }
   &__row {
     margin-bottom: -50px;
     &-main {
